[package]
name = "syn_util"
version = "0.1.1"
authors = ["Boncheol Gu <boncheol.gu@gmail.com>"]

description = "helper APIs for procedural macros"
keywords = ["procmacro", "syn"]
license = "MIT/Apache-2.0"
repository = "https://github.com/boncheolgu/syn_util"
readme = "README.md"

[dependencies]
proc-macro2 = "0.4"
syn = { version = "0.14", features = ["extra-traits"] }

[dev-dependencies]
quote = "0.6"
