[package]
name = "syn_util"
version = "0.2.0"
authors = ["Boncheol Gu <boncheol.gu@gmail.com>"]
edition = "2018"
description = "helper APIs for procedural macros"
keywords = ["procmacro", "syn"]
license = "MIT/Apache-2.0"
repository = "https://github.com/boncheolgu/syn_util"
readme = "README.md"

[dependencies]
proc-macro2 = "0.4"
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6"
