[package]
name = "syn_util"
version = "0.4.2"
authors = ["Boncheol Gu <boncheol.gu@gmail.com>"]
edition = "2018"
description = "helper APIs for procedural macros"
keywords = ["procmacro", "syn"]
license = "MIT/Apache-2.0"
repository = "https://github.com/boncheolgu/syn_util"
readme = "README.md"

[dependencies]
pmutil = "0.5"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
